--- a/Harmic/Views/Shared/Components/Product/Default.cshtml
+++ b/Harmic/Views/Shared/Components/Product/Default.cshtml
@@ -2,10 +2,11 @@
 
 @foreach(var item in Model.Take(8))
 {
+    string sUrl = $"/product/{item.Alias}-{item.ProductId}.html";
     <div class="col-xl-3 col-lg-4 col-sm-6">
         <div class="product-item">
             <div class="product-img img-zoom-effect">
-                <a href="single-product.html">
+                <a href="@sUrl">
                     <img class="img-full" src="@item.Image" alt="Product Images">
                 </a>
                 <div class="product-add-action">
@@ -29,9 +30,17 @@
                 </div>
             </div>
             <div class="product-content">
-                <a class="product-name" href="single-product.html">@item.Title</a>
+                <a class="product-name" href="@sUrl">@item.Title</a>
                 <div class="price-box pb-1">
-                    <span class="new-price">$@item.Price</span>
+                    @if (@item.PriceSale == 0)
+                    {
+                        <span class="new-price text-danger">$@item.Price</span>
+                    }
+                    else
+                    {
+                        <span class="new-price text-danger">$@item.PriceSale</span>
+                        <span class="old-price text-primary">$@item.Price</span>
+                    }
                 </div>
                 <div class="rating-box">
                     <ul>
