--- a/Harmic/Areas/Admin/Views/Menus/Edit.cshtml
+++ b/Harmic/Areas/Admin/Views/Menus/Edit.cshtml
@@ -39,10 +39,9 @@
                         <form asp-action="Edit">
                             <input type="hidden" asp-for="MenuId" />
                             <div class="card-body">
-
                                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                 <div class="form-group">
-                                    <label asp-for="Title" class="control-label"></label>
+                                    <label asp-for="Title" class="control-label">Tiêu đề</label>
                                     <input asp-for="Title" class="form-control" />
                                     <span asp-validation-for="Title" class="text-danger"></span>
                                 </div>
@@ -52,42 +51,35 @@
                                     <span asp-validation-for="Alias" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Description" class="control-label"></label>
+                                    <label asp-for="Description" class="control-label">Mô tả</label>
                                     <input asp-for="Description" class="form-control" />
                                     <span asp-validation-for="Description" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Levels" class="control-label"></label>
+                                    <label asp-for="Levels" class="control-label">Mức</label>
                                     <input asp-for="Levels" class="form-control" />
                                     <span asp-validation-for="Levels" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="ParentId" class="control-label"></label>
+                                    <label asp-for="ParentId" class="control-label">Menu cha</label>
                                     <input asp-for="ParentId" class="form-control" />
                                     <span asp-validation-for="ParentId" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Position" class="control-label"></label>
+                                    <label asp-for="Position" class="control-label">Vị trí</label>
                                     <input asp-for="Position" class="form-control" />
                                     <span asp-validation-for="Position" class="text-danger"></span>
                                 </div>
                                 <div class="form-group form-check">
                                     <label class="form-check-label">
-                                        <input class="form-check-input" asp-for="IsActive" /> @Html.DisplayNameFor(model => model.IsActive)
+                                        <input class="form-check-input" asp-for="IsActive" /> Hiển thị
                                     </label>
                                 </div>
-                                @* <div class="form-group">
-                                <input type="submit" value="Create" class="btn btn-primary" />
-                                </div> *@
-
-                            </div>
-                            <!-- /.card-body -->
-
-                            <div class="card-footer">
                                 <div class="form-group">
                                     <input type="submit" value="Sửa" class="btn btn-primary" />
                                 </div>
                             </div>
+                            <!-- /.card-body -->
                         </form>
                     </div>
 
