--- a/Harmic/Areas/Admin/Views/Products/Delete.cshtml
+++ b/Harmic/Areas/Admin/Views/Products/Delete.cshtml
@@ -47,8 +47,12 @@
                                 @Html.DisplayFor(model => model.Alias)
                             </div>
                             <div class="form-group">
+                                <label for="exampleInputPassword1">Chi tiết:</label>
+                                @Html.Raw(Model.Detail)
+                            </div>
+                            <div class="form-group">
                                 <label for="exampleInputPassword1">Ảnh:</label>
-                                <img src="@Html.DisplayFor(model => model.Image)" />
+                                <img src="@Html.DisplayFor(model => model.Image)" width="300px"/>
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputPassword1">Danh mục:</label>
@@ -63,7 +67,23 @@
                                 @Html.DisplayFor(model => model.PriceSale)
                             </div>
                             <div class="form-group">
-                                <label for="exampleInputPassword1">Hiện</label>
+                                <label for="exampleInputPassword1">Số lượng:</label>
+                                @Html.DisplayFor(model => model.Quantity)
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Sao:</label>
+                                @Html.DisplayFor(model => model.Star)
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Sản phẩm mới:</label>
+                                @Html.DisplayFor(model => model.IsNew)
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Bán chạy:</label>
+                                @Html.DisplayFor(model => model.IsBestSeller)
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Hiển thị</label>
                                 @Html.DisplayFor(model => model.IsActive)
                             </div>
                         </div>
@@ -95,129 +115,4 @@
         </div><!-- /.container-fluid -->
     </section>
     <!-- /.content -->
-</div>
-
-
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>TbProduct</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Title)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Alias)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Alias)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Detail)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Detail)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Image)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Image)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Price)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PriceSale)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PriceSale)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Quantity)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Quantity)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreatedDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreatedDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreatedBy)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreatedBy)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ModifiedDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ModifiedDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ModifiedBy)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ModifiedBy)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsNew)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IsNew)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsBestSeller)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IsBestSeller)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UnitInStock)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.UnitInStock)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsActive)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IsActive)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Star)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Star)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CategoryProduct)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CategoryProduct.CategoryProductId)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="ProductId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
 </div>
