--- a/Harmic/Areas/Admin/Views/Products/Edit.cshtml
+++ b/Harmic/Areas/Admin/Views/Products/Edit.cshtml
@@ -41,7 +41,7 @@
                                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                 <input type="hidden" asp-for="ProductId" />
                                 <div class="form-group">
-                                    <label asp-for="Title" class="control-label"></label>
+                                    <label asp-for="Title" class="control-label">Tiêu đề</label>
                                     <input asp-for="Title" class="form-control" />
                                     <span asp-validation-for="Title" class="text-danger"></span>
                                 </div>
@@ -51,21 +51,13 @@
                                     <span asp-validation-for="Alias" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="CategoryProductId" class="control-label"></label>
-                                    <select asp-for="CategoryProductId" class="form-control" asp-items="ViewBag.CategoryProductId"></select>
+                                    <label asp-for="CategoryProductId" class="control-label">Danh mục</label>
+                                    <select asp-for="CategoryProductId" class="form-control" asp-items="ViewBag.CategoryProductId">
+                                        <option value="0" selected>--[Chọn danh mục]--</option>
+                                    </select>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Description" class="control-label"></label>
-                                    <input asp-for="Description" class="form-control" />
-                                    <span asp-validation-for="Description" class="text-danger"></span>
-                                </div>
-                                <div class="form-group">
-                                    <label asp-for="Detail" class="control-label"></label>
-                                    <textarea asp-for="Detail" class="form-control"></textarea>
-                                    <span asp-validation-for="Detail" class="text-danger"></span>
-                                </div>
-                                <div class="form-group">
-                                    <label asp-for="Image" class="control-label"></label>
+                                    <label asp-for="Image" class="control-label">Ảnh</label>
                                     <div class="input-group mb-3">
                                         <div class="input-group-prepend">
                                             <button type="button" class="btn btn-success" onclick="openDialog()">Choose a picture</button>
@@ -76,51 +68,50 @@
                                     <span asp-validation-for="Image" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Price" class="control-label"></label>
+                                    <label asp-for="Description" class="control-label">Mô tả</label>
+                                    <textarea asp-for="Description" class="form-control"></textarea>
+                                    <span asp-validation-for="Description" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="Detail" class="control-label">Chi tiết</label>
+                                    <textarea asp-for="Detail" class="form-control"></textarea>
+                                    <span asp-validation-for="Detail" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="Price" class="control-label">Giá</label>
                                     <input asp-for="Price" class="form-control" />
                                     <span asp-validation-for="Price" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="PriceSale" class="control-label"></label>
+                                    <label asp-for="PriceSale" class="control-label">Giá giảm</label>
                                     <input asp-for="PriceSale" class="form-control" />
                                     <span asp-validation-for="PriceSale" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Quantity" class="control-label"></label>
+                                    <label asp-for="Quantity" class="control-label">Số lượng</label>
                                     <input asp-for="Quantity" class="form-control" />
                                     <span asp-validation-for="Quantity" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Star" class="control-label"></label>
+                                    <label asp-for="Star" class="control-label">Sao</label>
                                     <input asp-for="Star" class="form-control" />
                                     <span asp-validation-for="Star" class="text-danger"></span>
                                 </div>
                                 <div class="form-group form-check">
                                     <label class="form-check-label">
-                                        <input class="form-check-input" asp-for="IsNew" /> @Html.DisplayNameFor(model => model.IsNew)
+                                        <input class="form-check-input" asp-for="IsNew" /> Sản phẩm mới
                                     </label>
                                 </div>
                                 <div class="form-group form-check">
                                     <label class="form-check-label">
-                                        <input class="form-check-input" asp-for="IsBestSeller" /> @Html.DisplayNameFor(model => model.IsBestSeller)
+                                        <input class="form-check-input" asp-for="IsBestSeller" /> Sản phẩm bán chạy
                                     </label>
                                 </div>
-                                @* <div class="form-group">
-                                <label asp-for="UnitInStock" class="control-label"></label>
-                                <input asp-for="UnitInStock" class="form-control" />
-                                <span asp-validation-for="UnitInStock" class="text-danger"></span>
-                                </div> *@
-
                                 <div class="form-group form-check">
                                     <label class="form-check-label">
-                                        <input class="form-check-input" asp-for="IsActive" /> @Html.DisplayNameFor(model => model.IsActive)
+                                        <input class="form-check-input" asp-for="IsActive" /> Hiển thị
                                     </label>
                                 </div>
-
-                            </div>
-                            <!-- /.card-body -->
-
-                            <div class="card-footer">
                                 <div class="form-group">
                                     <input type="submit" value="Sửa" class="btn btn-primary" />
                                 </div>
