--- a/Harmic/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Harmic/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -879,9 +879,9 @@
     <!-- Bootstrap 4 -->
     <script src="~/admin/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- ChartJS -->
-    <script src="~/admin/plugins/chart.js/Chart.min.js"></script>
+    @* <script src="~/admin/plugins/chart.js/Chart.min.js"></script>
     <!-- Sparkline -->
-    <script src="~/admin/plugins/sparklines/sparkline.js"></script>
+    <script src="~/admin/plugins/sparklines/sparkline.js"></script> *@
     <!-- JQVMap -->
     <script src="~/admin/plugins/jqvmap/jquery.vmap.min.js"></script>
     <script src="~/admin/plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
@@ -893,7 +893,7 @@
     <!-- Tempusdominus Bootstrap 4 -->
     <script src="~/admin/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
     <!-- Summernote -->
-    <script src="~/admin/plugins/summernote/summernote-bs4.min.js"></script>
+    @* <script src="~/admin/plugins/summernote/summernote-bs4.min.js"></script> *@
     <!-- overlayScrollbars -->
     <script src="~/admin/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
     <!-- AdminLTE App -->
